Link modulo dos

--- a/MODULO_UNO/fundamentos.html
+++ b/MODULO_UNO/fundamentos.html
@@ -30,7 +30,7 @@
     <p>Las mejores prácticas de ITIL</p><p></p>
     <a href="beneficios_1.8.1.PNG">1.8.1 Beneficios.</a></p>
 
-    <h1>Ealuación uno</h1>
+    <h1>Evaluación uno</h1>
     <a href="p1.PNG">Pregunta 1</a>-->2 ok<p></p>
     <a href="p2.PNG">Pregunta 2</a>-->3 ok<p></p>
     <a href="p3.PNG">Pregunta 3</a>-->3 ok es una mejor practica<p></p>
@@ -41,6 +41,10 @@
     <a href="p8.PNG">Pregunta 8</a>-->1 ok Conjunto de Conceptos<p></p>
     <a href="p9.PNG">Pregunta 9</a>-->1 ok una guiá paso a paso<p></p>
     <a href="p10.PNG">Pregunta 10</a>-->3 ok Entregar valor al cliente a través de servicios<p></p>
+
+
+    <h1>MODULO DOS</h1><p></p>
+    <a href="../MODULO_DOS/modulo_dos.html">MODULO DOS</a>
 
 
 
