Empieza modulo Dos

--- a/MODULO_DOS/modulo_dos.html
+++ b/MODULO_DOS/modulo_dos.html
@@ -1,1 +1,16 @@
 <h1>Modulo Dos.</h1>
+
+<h1>2.1 Objetivos</h1><p></p>
+
+<a href="Objetivos.PNG">2.1->Objetivos</a><br>
+<a href="Servicio_2.2.PNG">2.2->Qué es Servicio</a><br>
+<a href="tipo_1.PNG">2.3->Tipos de Servicio --> Servicio de cara al cliente </a><br>
+<a href="Tipo_2.PNG">2.3->Tipos de Servicio --> Servicio de Soporte </a><br>
+<a href="Tipo_3.PNG">2.3->Tipos de Servicio --> interacción entre Ellos. </a><br>
+
+<h1>2.4 El valor de un Servicio</h1><br>
+
+<a href="valor_1.PNG">2.4.1->Servicio Intangible </a><br>
+<a href="valor_2.PNG">2.4.2->Valor del Servicio </a><br>
+
+
