--- a/MODULO_DOS/modulo_dos.html
+++ b/MODULO_DOS/modulo_dos.html
@@ -13,4 +13,13 @@
 <a href="valor_1.PNG">2.4.1->Servicio Intangible </a><br>
 <a href="valor_2.PNG">2.4.2->Valor del Servicio </a><br>
 
+<hr><p></p>
+
+<h1>2.5 Gestión de Servicios de TI</h1><br>
+
+<a href="Gestión_1.PNG">2.5.1--> Relación Cliente y Proveedor </a><br>
+<a href="Gestión_2.PNG">2.5.2--> Definición de TI </a><br>
+<a href="Gestión_3.PNG">2.5.3--> Definición de ITIL </a><br>
+
+
 
