--- a/MODULO_DOS/modulo_dos.html
+++ b/MODULO_DOS/modulo_dos.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Modulo Dos</title>
+    <style type="text/css">
+        body{
+            background-color: rgb(38, 105, 168);
+            color:white;
+            font-size: 15px;
+        }
+        a{
+            color: black;
+            font-size: 24px;
+        }
+    </style>
+
+</head>
+<body>
+
+    
 <h1>Modulo Dos.</h1>
 
 <h1>2.1 Objetivos</h1><p></p>
@@ -20,6 +43,12 @@
 <a href="Gestión_1.PNG">2.5.1--> Relación Cliente y Proveedor </a><br>
 <a href="Gestión_2.PNG">2.5.2--> Definición de TI </a><br>
 <a href="Gestión_3.PNG">2.5.3--> Definición de ITIL </a><br>
+
+
+
+    
+</body>
+</html>
 
 
 
