--- a/MODULO_UNO/fundamentos.html
+++ b/MODULO_UNO/fundamentos.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ITIL</title>
+
+    <style type="text/css">
+        body{
+            background-color: rgb(38, 105, 168);
+            color:white;
+            font-size: 15px;
+        }
+        a{
+            color: black;
+            font-size: 24px;
+        }
+    </style>
+
+
 </head>
 <body>
     
