--- a/MODULO_DOS/modulo_dos.html
+++ b/MODULO_DOS/modulo_dos.html
@@ -44,6 +44,59 @@
 <a href="Gestión_2.PNG">2.5.2--> Definición de TI </a><br>
 <a href="Gestión_3.PNG">2.5.3--> Definición de ITIL </a><br>
 
+<hr><p></p>
+
+<h1>2.6 Tipos de Proveedores de Servicios.</h1><br>
+
+<a href="Tipo_servicio.PNG">2.6.1--> Tipo servicios ->examen </a><br>
+
+<hr><p></p>
+
+<h1>Actividad (Examen).</h1><br>
+
+<a href="exa1.PNG">1.- Uno --> Garantia </a><br>
+
+
+<hr><p></p>
+
+<h1>2.7 Partes Interesadas. -_>Examen</h1><br>
+
+<a href="partes_1.PNG">2.7.1-->Identificar  </a><br>
+
+<a href="partes_2.PNG">2.7.2-->Partes.  </a><br>
+
+<hr><p></p>
+
+
+<hr><p></p>
+
+<h1>Actividad -->Examen</h1><br>
+
+<a href="actividad_2.PNG">2.- Disponibilidad  </a><br>
+
+<hr><p></p>
+
+
+<hr><p></p>
+
+<h1>2.8 Como son entregados los servicios. </h1><br>
+
+<a href="entregados_1.PNG">2.8.1-->Activos de Servicio </a><br>
+<a href="entregados_2.PNG">2.8.2-->Recursos y Capacidades </a><br>
+<a href="entregados_3.PNG">2.8.3-->Procesos </a><br>
+<a href="entregados_4.PNG">2.8.4-->Entregan </a><br>
+<a href="entregados_5.PNG">2.8.5-->Modelo de Proceso </a><br>
+<a href="entregados_6.PNG">2.8.6-->Control del Proceso </a><br>
+<a href="entregados_7.PNG">2.8.7-->Funciones </a><br>
+<a href="entregados_8.PNG">2.8.8-->Ejemplos de Funciones </a><br>
+<a href="entregados_9.PNG">2.8.9-->Roles genéricos </a><br>
+<a href="entregados_10.PNG">2.8.10-->Director del Proceso </a><br>
+
+<hr><p></p>
+
+
+
+
 
 
     
