Final de la unidad dos

--- a/MODULO_DOS/modulo_dos.html
+++ b/MODULO_DOS/modulo_dos.html
@@ -94,6 +94,46 @@
 
 <hr><p></p>
 
+<hr><p></p>
+
+<h1>2.9 EL ciclo de vida del Servicio. </h1><br>
+
+<a href="ser_1.PNG">2.9.1-->Vida del Servicio </a><br>
+<a href="ser_2.PNG">2.9.2-->Estrategia del Servicio </a><br>
+<a href="ser_3.PNG">2.9.3-->Diseño del Servicio </a><br>
+<a href="ser_4.PNG">2.9.4-->Transición del Servicio </a><br>
+<a href="ser_5.PNG">2.9.5-->Operación del Servicio </a><br>
+<a href="ser_6.PNG">2.9.6-->Mejora continua </a><br>
+
+<hr><p></p>
+
+
+<hr><p></p>
+
+<h1>Actividad -->Examen</h1><br>
+
+<a href="actividad_3.PNG">2.- Patrocinio,diseño  </a><br>
+
+<hr><p></p>
+
+<hr><p></p>
+
+<h1>Evaluación Módulo Dos -->Examen</h1><br>
+
+<a href="exa_1.PNG">Uno</a><br>
+<a href="exa_2.PNG">Dos</a><br>
+<a href="exa_3.PNG">Tres</a><br>
+<a href="exa_4.PNG">Cuatro</a><br>
+<a href="exa_5.PNG">Cinco</a><br>
+<a href="exa_6.PNG">Seis</a><br>
+<a href="exa_7.PNG">Siete</a><br>
+<a href="exa_8.PNG">Ocho</a><br>
+<a href="exa_9.PNG">Nueve</a><br>
+<a href="exa_10.PNG">Diez</a><br>
+
+<hr><p></p>
+
+
 
 
 
