--- a/MODULO_TRES/modulo_tres.html
+++ b/MODULO_TRES/modulo_tres.html
@@ -31,6 +31,8 @@
 <a href="tres_tres.html" target="blanck">2.3.3 -->Web modulo 3.3 </a><p></p>
 <a href="tres_cuatro.html" target="blanck">2.3.4 -->Web modulo 3.4 </a><p></p>
 <a href="tres_cinco.html" target="blanck">2.3.5 -->Web modulo 3.5 </a><p></p>
+<a href="tres_seis.html" target="blanck">2.3.6 -->Web modulo 3.6 </a><p></p>
+<a href="tres_actividad.html" target="blanck">Actividad -->Web modulo Actividad </a><p></p>
 
 
 
